manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ci-load-test
  namespace: echoserver
  annotations:
    nginx.ingress.kubernetes.io/health-check-path: /
spec:
  rules:
    - host: foo.localhost
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: foo-echoserver-svc
                port:
                  number: 8080
    - host: bar.localhost
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: bar-echoserver-svc
                port:
                  number: 8081
